2003-12-15  Mark Kettenis  <kettenis@gnu.org>

	* sparc-sol2-nat.c: Add 64-bit support.
	(supply_gregset): Call sparc_supply_gregset
	instead of sparc32_supply_gregset.
	(supply_fpregset, fill_gregset, fill_fpregset): Likewise.
	* sparc64-sol2-nat.c: Remove file.
	* configure.host: Use a single configuration for
	sparc-*-solaris2*, sparcv9-*-solaris2* and sparc64-solaris2*.
	* Makefile.in (ALLDEPFILES): Remobe sparc64-sol2-nat.c.
	(sparc-sol2-nat.o): Update dependency.
	(sparc64-sol2-nat.o): Remove dependency.
	* config/sparc/sol2.mh: Update comment.
	* config/sparc/sol64.mh: Remobe file.

2003-12-14  Mark Kettenis  <kettenis@gnu.org>

	* configure.tgt: Rearrange things such that we include 64-bit
	Solaris 2 support for Solaris 7 and up, just like what is done for
	libbfd.

2003-11-16  Mark Kettenis  <kettenis@gnu.org>

	* config/sparc/xm-sun4sol2.h: Remove.
	* config/sparc/xm-linux.h: Remove.

	* sparc-tdep.h (sparc32nbsd_gregset): Add extern declaration.
	* sparcnbsd-nat.c: Rewrite.
	* sparcnbsd-tdep.c (sparc32nbsd_gregset): Rename from
	sparcnbsd_gregset.
	(fetch_core_registers): Adjust.
	(sparc32nbsd_init_abi): Rename from sparcnbsd_init_abi.
	(sparc32nbsd_aout_init_abi): Rename from sparcbsd_aout_init_abi.
	(sparc32nbsd_elf_init_abi): Rename from sparcbsd_elf_init_abi.
	(_initialize_sparnbsd_tdep): Adjust.
	* Makefile.in (ALLDEPFILES): Add sparcnbsd-nat.c.
	(sparcnbsd-nat.o): New dependency.
	* configure.host: Add sparc-*-netbsdelf*, sparc-*-netbsdaout* and
	sparc-*-netbsd*.
	* config/sparc/nm-nbsd.h: Don't include "regcache.h".
	(CHILD_PREPARE_TO_STORE): Remove.
	* config/sparc/nm-nbsdaout.h: Tweak some comments.
	* config/sparc/nbsdelf.mh (NATDEPFILES): Add sparc-nat.o.
	(XM_FILE): Delete.
	* config/sparc/nbsdaout.mh (NATDEPFILES): Add sparc-nat.o
	(XM_FILE): Delete.

2003-11-15  Mark Kettenis  <kettenis@gnu.org>

	* sparcnbsd-tdep.c: Don't include "target.h", "value.h" and
	"sparcnbsd-tdep.h".
	(REG32_OFFSET_PSR, REG32_OFFSET_PC, REG32_OFFSET_NPC,