@@ -627,7 +627,10 @@ sparc64_frame_cache (struct frame_info *next_frame, void **this_cache)
 
   cache->pc = frame_func_unwind (next_frame);
   if (cache->pc != 0)
-    sparc64_analyze_prologue (cache->pc, frame_pc_unwind (next_frame), cache);
+    {
+      CORE_ADDR addr_in_block = frame_unwind_address_in_block (next_frame);
+      sparc64_analyze_prologue (cache->pc, addr_in_block, cache);
+    }
 
   if (cache->frameless_p)
     {
